--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
 option {
     text-transform: lowercase;
 }
+
+input {
+    width: 300px;
+    height: 100px;
+    transition: 1s;
+}
+input:hover{
+
+    font: bold;
+    color: red;
+}
