--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-option {
+/* option {
     text-transform: lowercase;
 }
 
@@ -11,4 +11,43 @@ input:hover{
 
     font: bold;
     color: red;
+}
+
+img {
+    height: 300px;
+    width: 300px;
+} */
+
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.ejercicios{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    padding: 0;
+    border: 1px solid #000;
+
+}
+.texto {
+    display: flex;
+    flex-direction: column;
+    border-left: 1px solid #000;
+
+}
+.titulo{
+    border-bottom: 1px solid #000;
+    padding-bottom: 10px;
+    font-weight: bold;
+}
+.ejercicios p{
+    padding-left: 15px;
+}
+
+.ejercicios input{
+    width: 100px;
+    height: 30px;
+    align-self: center;
+    justify-self:center ;
+    
 }
